added compare gif

--- a/molecular dynamics.ipynb
+++ b/molecular dynamics.ipynb
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "607ca24f",
+   "id": "0ae41986",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "704de2ed",
+   "id": "da9ec8fe",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -151,7 +151,7 @@
     "$\\sigma$ is the distance at which the particle-particle energy is zero\n",
     "$r$ is the distance between the particles\n",
     "\n",
-    "$$A(x) = -\\nabla U(r) = 24\\varepsilon \\left[\\frac{\\sigma^5}{r^7} - 2\\frac{\\sigma^{11}}{r^{13}} \\right]$$\n",
+    "$$F(x) = -\\nabla U(r) = 24\\varepsilon \\left[\\frac{\\sigma^5}{r^7} - 2\\frac{\\sigma^{11}}{r^{13}} \\right]$$\n",
     "\n",
     "Usually only for pair potential $\\rightarrow$ need more complex potential for many systems\n",
     "\n",
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "06896fde",
+   "id": "c05db604",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -297,8 +297,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "id": "6af4d3f5",
+   "execution_count": 143,
+   "id": "a95656c3",
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -311,7 +311,7 @@
        "LJAccels (generic function with 1 method)"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,11 +338,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
-   "id": "8b0971ea",
+   "execution_count": 145,
+   "id": "e06b2dad",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "subslide"
     }
    },
    "outputs": [
@@ -370,13 +370,14 @@
     "    v_next = v_n .+ 0.5 * (A_n + A_next) * Δt\n",
     "    x_n = x_next; v_n = v_next; A_n = A_next\n",
     "end\n",
+    "\n",
     "display(\"image/gif\", read(\"./two_body.gif\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ef4db99a",
+   "execution_count": 137,
+   "id": "f18ba259",
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -395,8 +396,23 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
-   "id": "4435d340",
+   "id": "8dd14005",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Techniques to reduce the computational complexity of the A(x) term of Verlet\n",
+    "The simple naïve approach to go through every permutation of pairs and compute net force $\\rightarrow O(n^2)$\n",
+    "<center><img src=\"compare.gif\"></img><center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3e88c27",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
