added cutoff radius

--- a/molecular dynamics.ipynb
+++ b/molecular dynamics.ipynb
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ae41986",
+   "id": "9f21c56d",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da9ec8fe",
+   "id": "07c131db",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "c05db604",
+   "id": "f0b94ed9",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -298,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "a95656c3",
+   "id": "fa9a99da",
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "e06b2dad",
+   "id": "0943ac51",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -364,7 +364,7 @@
     "x_n  = [p1.position, p2.position]\n",
     "for i in 0:Δt:t_end\n",
     "    A_n    = LJAccels(particles)\n",
-    "    x_next    = x_n .+ v_n .* Δt .+ 0.5* A_n * Δt^2\n",
+    "    x_next    = x_n .+ v_n .* Δt .+ 0.5* A_n * Δt^2  # VELOCITY VERLET\n",
     "    update_particles(particles, x_next)\n",
     "    A_next = LJAccels(particles)\n",
     "    v_next = v_n .+ 0.5 * (A_n + A_next) * Δt\n",
@@ -377,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "f18ba259",
+   "id": "71eb3c63",
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -398,7 +398,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "8dd14005",
+   "id": "7dd4f509",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -412,7 +412,64 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3e88c27",
+   "id": "cb6510b8",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Using Newton's Third Law to cut the computations in half\n",
+    "\n",
+    "$$F_{ij} = -F_{ji}$$\n",
+    "<small>\n",
+    "<pre>\n",
+    "<b>Without Newton 3rd law</b>\n",
+    "for i in 1:length(particles)\n",
+    "    for j in 1:length(particles)\n",
+    "        f = force(particles[i], particles[j])\n",
+    "        A[i] += f\n",
+    "    end\n",
+    "end\n",
+    "\n",
+    "<b>With Newton 3rd law</b>\n",
+    "for i in 1:length(particles)-1\n",
+    "    for j in i+1:length(particles)\n",
+    "        f = force(particles[i], particles[j])\n",
+    "        A[i] += f\n",
+    "        A[j] -= f\n",
+    "    end\n",
+    "end\n",
+    "</pre>\n",
+    "</small>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a32a778c",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Using cuttoff radius and Linked Cell method \n",
+    "\n",
+    "Since the Lennard-Jones potential and many other molecular potentials drop off rapidly with distance($1/r^6$) the effects of particles far away are negligable so we can set a cuttoff radius so to only consider nearby particles for the $A(x)$ terms\n",
+    "\n",
+    "$$\n",
+    "F(r_{ij}) = \\left\\{ \\begin{array}{ll}\n",
+    "      24 \\varepsilon \\left[\\frac{\\sigma^5}{r_{ij}^7} - 2\\frac{\\sigma^{11}}{r_{ij}^{13}} \\right] & r_{ij} \\leq r_{cut} \\\\\n",
+    "      0 & r_{ij} > r_{cut} \\\\\n",
+    "\\end{array} \n",
+    "\\right.\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd249946",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
